--- a/css/style.css
+++ b/css/style.css
@@ -280,3 +280,22 @@ nav ul li a:hover {
 .earthbound img {
     border-radius: 0;
 }
+.icon {
+    height: 16px !important;
+    width: auto !important;
+}
+.cboxList {
+    border: 0px solid;
+    position: relative;
+    overflow-y: visible;
+    height: 233px;
+    -webkit-overflow-scrolling: touch;
+}
+.cboxForm {
+    border: 0px solid;
+    border-top: 0px;
+    border-radius: 0 0 16px 16px;
+    position: relative;
+    height: 127px;
+    overflow: hidden;
+}
