--- a/css/style.css
+++ b/css/style.css
@@ -220,13 +220,21 @@ nav ul li a:hover {
     height: fit-content;
     border-radius: var(--border-medium);
     padding: 32px;
-    text-indent: 5%;
+    text-indent: calc(4 * var(--margin-size));
     text-align: justify;
     line-height: 24px;
 }
 .remarked li{
     margin-left: calc(4 * var(--margin-size));
     margin-right: calc(2 * var(--margin-size));
+    text-indent: 0;
+}
+.remarked blockquote{
+    color: #404040;
+    margin-left: calc(6 * var(--margin-size));
+    text-indent: 0;
+}
+.remarked pre>code{
     text-indent: 0;
 }
 .remarked img{
@@ -236,27 +244,6 @@ nav ul li a:hover {
     max-width: 100%;
     height: auto;
     border-radius: var(--border-medium);
-}
-.pageTitleDual{
-    background-color: var(--title-color);
-    float: none;
-    height: fit-content;
-    border-radius: var(--border-small);
-    padding: 16px;
-}
-.pageTitleDual p{
-    color: var(--content-color);
-    font-weight: bold;
-    font-size: 20px;
-}
-.pageTitleDual p:first-of-type{
-    text-align: left;
-    float: left;
-    margin-left: calc(2.5 * var(--margin-size));
-}
-.pageTitleDual p:last-of-type{
-    text-align: right;
-    margin-right: calc(2.5 * var(--margin-size));
 }
 .pageContent{
     background-color: var(--content-color);
@@ -320,7 +307,7 @@ nav ul li a:hover {
     cursor: url('../assets/cursors/cursor_interact.png'), auto;
 }
 .spacer {
-    margin-bottom: 100px;
+    margin-bottom: 120px;
 }
 .earthbound img {
     border-radius: 0;
